[project]
name = "fakester"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.2",
    "crispy-bootstrap5==2024.10",
    "dj-database-url==2.2.0",
    "django-crispy-forms==2.3",
    "django-ipware==7.0.1",
    "django-ratelimit==4.1.0",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "psycopg2==2.9.9",
    "redis[hiredis]==5.1.1",
    "python-decouple==3.8",
    "sentry-sdk==2.16.0",
    "yarl==1.15.2",
    "flit-core>=3.12.0",
]

[project.optional-dependencies]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "black==24.10.0",
    "interrogate==1.7.0",
    "isort==5.13.2",
    "ruff==0.6.9",
    "coverage[toml]==7.6.2",
    "fakeredis==2.25.1",
    "model-bakery==1.20.0",
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "pytest-mock==3.14.0",
    "django-stubs==5.1.0",
    "mypy==1.11.2",
    "types-dj-database-url==1.3.0.4",
    "mkdocs==1.6.1",
    "mkdocs-include-markdown-plugin==6.2.2",
    "mkdocs-material==9.5.40",
    "nox==2024.10.9",
]

[tool.black]
target-version = ["py312"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = [
  "*/asgi.py",
  "*/manage.py",
  "*/migrations/*",
  "*/wsgi.py",
]

[tool.django-stubs]
django_settings_module = "fakester.settings"

[tool.interrogate]
ignore-init-module = true
ignore-nested-classes = true
fail-under = 95
exclude = [
  "*/asgi.py",
  "*/manage.py",
  "*/migrations/*",
  "*/wsgi.py",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = [
  "crispy_forms.*",
  "decouple",
  "django_ratelimit.decorators",
  "ipware",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --import-mode=importlib --verbose"
testpaths = "tests"
pythonpath = "src"
DJANGO_SETTINGS_MODULE = "fakester.settings"

[tool.ruff]
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ANN",  # flake8-annotations
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "D",  # pydocstyle
  "DJ",  # flake8-django
  "E",  # flake8
  "F",  # flake8
  "N",  # pep8-naming
  "PT",  # flake8-pytest-style
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TRY",  # tryceratops
  "UP",  # pyupgrade
]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "D104",  # Missing docstring in public package
  "D106",  # Missing docstring in public nested class
  "S101",  # Use of `assert` detected
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
